tests/fixtures/invalid/restrict_scalar_declaration.c
int main(void) {
    restrict int value = 1;
    return value;
}
